Fixed overlapping modal-containers

--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -1,3 +1,15 @@
+.modal-container {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 25;
+}
+
 .modal {
   padding: 20px 40px;
   width: 30%;
