--- a/scss/_username-chooser.scss
+++ b/scss/_username-chooser.scss
@@ -1,15 +1,4 @@
 /* Username chooser */
-.modal-container {
-  background-color: rgba(0, 0, 0, 0.75);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .buttons {
   margin-top: 10px;
 }
